[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-bench"
version = "0.1.0"
description = "Benchmark Ollama models across quantization levels on CPU-only hardware"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["ollama", "llm", "quantization", "benchmark", "cpu"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.31.0",
    "sentence-transformers>=2.7.0",
    "matplotlib>=3.8.0",
    "psutil>=5.9.0",
    "click>=8.1.7",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "responses>=0.25.0",
    "ruff>=0.4.0",
]

[project.scripts]
quant-bench = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["benchmark*"]

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.package-data]
"benchmark" = ["prompts/*.txt"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
